--- a/pom.xml
+++ b/pom.xml
@@ -29,14 +29,7 @@
       <version>4.11</version>
     </dependency>
 
-    <dependency>
-      <!-- bring in the full selenium deploy
-           we could be more selective and bring
-           only what we need -->
-      <groupId>org.seleniumhq.selenium</groupId>
-      <artifactId>selenium-server</artifactId>
-      <version>2.39.0</version>
-    </dependency>
+
 
   <!--  Gson: Java to Json conversion -->
     <dependency>
@@ -49,30 +42,31 @@
     	<dependency>
   		<groupId>info.cukes</groupId>
   		<artifactId>cucumber-java</artifactId>
-  		<version>1.1.2</version>
-  		<scope>test</scope>
+  		<version>1.1.5</version>
   	</dependency>
   		<dependency>
   		<groupId>info.cukes</groupId>
   		<artifactId>cucumber-junit</artifactId>
-  		<version>1.1.2</version>
-  		<scope>test</scope>
+  		<version>1.1.5</version>
   	</dependency>
   	<dependency>
   		<groupId>info.cukes</groupId>
   		<artifactId>cucumber-picocontainer</artifactId>
-  		<version>1.1.2</version>
-  		<scope>test</scope>
+  		<version>1.1.5</version>
   	</dependency>
   	<dependency>
   		<groupId>info.cukes</groupId>
   		<artifactId>cucumber-core</artifactId>
-  		<version>1.1.2</version>
-  		<scope>test</scope>
+  		<version>1.1.5</version>
   	</dependency>
 
 
 
+  	<dependency>
+  		<groupId>org.seleniumhq.selenium</groupId>
+  		<artifactId>selenium-java</artifactId>
+  		<version>2.40.0</version>
+  	</dependency>
   </dependencies>
   
   
